--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@lottiefiles/dotlottie-react": "^0.14.3",
     "@tailwindcss/vite": "^4.1.11",
     "axios": "^1.10.0",
+    "marked": "^16.0.0",
     "moment": "^2.30.1",
     "quill": "^2.0.3",
     "react": "^19.1.0",
